# MachineLearning

./: .gitignore  CMakeLists.txt  README.md
App/: CMakeLists.txt  NeuralNetApp.cpp
DataProcessing/: CMakeLists.txt  Dataset.cpp  Dataset.hpp
FeedForwardNeuralNet/: CMakeLists.txt  NeuralNet.cpp  NeuralNet.hpp  NeuralNetActivation.cpp  NeuralNetActivation.hpp  NeuralNetBuilder.cpp  NeuralNetBuilder.hpp
LinearAlgebra/: CMakeLists.txt  Matrix2D.cpp  Matrix2D.hpp
LossMeasures/: CMakeLists.txt  Loss.cpp  Loss.hpp
datasets/: ABALONE_preprocessed.csv  BREAST_CANCER_WISCONSIN_preprocessed.csv  BreastCancerTestFold0.csv  BreastCancerTestFold1.csv  BreastCancerTestFold2.csv  BreastCancerTestFold3.csv  BreastCancerTestFold4.csv  BreastCancerTestFold5.csv  BreastCancerTestFold6.csv  BreastCancerTestFold7.csv  BreastCancerTestFold8.csv  BreastCancerTestFold9.csv  BreastCancerTrainFold0.csv  BreastCancerTrainFold1.csv  BreastCancerTrainFold2.csv  BreastCancerTrainFold3.csv  BreastCancerTrainFold4.csv  BreastCancerTrainFold5.csv  BreastCancerTrainFold6.csv  BreastCancerTrainFold7.csv  BreastCancerTrainFold8.csv  BreastCancerTrainFold9.csv  COMPUTER_HARDWARE_preprocessed.csv  FOREST_FIRES_preprocessed.csv  GLASS_preprocessed.csv  SOYBEAN_SMALL_preprocessed.csv  iris_preprocessed.csv  xor_data.csv
